K8-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app
spec:
  selector:
    app: my-spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
